--- a/package.json
+++ b/package.json
@@ -17,8 +17,18 @@
   },
   "dependencies": {
     "@nuxt/bridge": "^3.0.0",
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
+    "@sentry/node": "^7.93.0",
+    "@sentry/profiling-node": "^1.3.5",
+    "@sentry/vite-plugin": "^2.10.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "nuxt": "^3.9.1",
     "pinia": "^2.1.7",
     "vuex": "^4.1.0"
