feat: Updating API with automatic routes management, config, auth and error handling

--- a/api/.env.template
+++ b/api/.env.template
@@ -1,5 +1,28 @@
+# GLOBAL CONFIGURATION
 API_PORT=3002
+NODE_ENV=production
+
+# SENTRY CONFIGURATION
 SENTRY_AUTH_TOKEN=YOUR_SENTRY_AUTH_TOKEN
 SENTRY_DSN=YOUR_SENTRY_DSN
-NODE_ENV=development
-```
+
+# CHATGPT CONFIGURATION
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+
+# TOKEN CONFIGURATION
+JWT_SECRET=YOUR_JWT_SECRET
+
+# DATABASE CONFIGURATION
+DB_HOST=YOUR_DB_HOST
+DB_PORT=YOUR_DB_PORT
+DB_USER=YOUR_DB_USER
+DB_PASSWORD=YOUR_DB_PASSWORD
+
+# DISCORD CONFIGURATION
+DISCORD_CLIENT_ID=YOUR_DISCORD_CLIENT_ID
+DISCORD_CLIENT_SECRET=YOUR_DISCORD_CLIENT_SECRET
+DISCORD_REDIRECT_URI=YOUR_DISCORD_REDIRECT_URI
+DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN
+DISCORD_BOT_ID=YOUR_DISCORD_BOT_ID
+DISCORD_GUILD_ID=YOUR_DISCORD_GUILD_ID
+DISCORD_GUILD_INVITE=YOUR_DISCORD_GUILD_INVITE
