--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,15 @@
     "@sentry/cli": "^2.25.3",
     "@sentry/node": "^7.93.0",
     "@sentry/profiling-node": "^1.3.5",
+    "@types/chai": "^4.3.11",
+    "@types/chai-as-promised": "^7.1.8",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "@types/sinon-express-mock": "^1.3.12",
     "axios": "^1.6.7",
     "chai": "^5.0.3",
     "dotenv": "^16.3.1",
@@ -21,19 +28,29 @@
     "express-validator": "^7.0.1",
     "global": "^4.4.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "nock": "^13.5.1",
+    "openai": "^4.27.0",
+    "prom-client": "^15.1.0",
     "rewiremock": "^3.14.5",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
+    "sinon-express-mock": "^2.2.1",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "dev": "ts-node-dev ./server.ts --watch server/**/*.d.ts",
+    "dev": "ts-node-dev ./server.ts --watch **/*.d.ts **/*.ts",
     "build": "tsc",
+    "test:watch": "TS_NODE_TRANSPILE_ONLY=true yarn mocha -r ts-node/register --bail --watch --watch-extensions ts --watch-files server",
     "text:unit": "mocha --require ts-node/register --require tsconfig-paths/register --recursive --reporter spec --timeout 10000 --exit ./test/unit/**/*.spec.ts",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org gilles-cognin --project afdesports-admin-api ./out && sentry-cli sourcemaps upload --org gilles-cognin --project afdesports-admin-api ./out"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "chai-as-promised": "^7.1.1"
   }
 }
