--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -13,6 +13,6 @@
     // This improves issue grouping in Sentry.
     "sourceRoot": "/"
   },
-  "include": ["./**/*.ts"],
+  "include": ["./**/*.ts", "./**/*.spec.ts"],
   "exclude": ["node_modules"]
 }
