feat: Updating env variables and base package

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,16 @@
+# GLOBAL
+PROJECT_NAME=""
+
+# DISCORD
 VUE_APP_DISCORD_CLIENT_ID=
 VUE_APP_DISCORD_CLIENT_SECRET=
 VUE_APP_DISCORD_URI=
 
-# Sentry
+# SENTRY
 SENTRY_AUTH_TOKEN=""
+
+# DEPLOYMENT
+UID=${UID}
+GRAFANA_USER="GRAFANA_USER"
+GRAFANA_PASSWORD="GRAFANA_PASSWORD"
+```
