--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "@sentry/cli": "^2.25.3",
     "@sentry/node": "^7.93.0",
     "@sentry/profiling-node": "^1.3.5",
+    "@types/bcryptjs": "^2.4.6",
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.8",
     "@types/jest": "^29.5.12",
@@ -22,6 +23,7 @@
     "@types/sinon-chai": "^3.2.12",
     "@types/sinon-express-mock": "^1.3.12",
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "chai": "^5.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
