--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
+    "@types/sequelize": "^4.28.20",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.12",
     "@types/sinon-express-mock": "^1.3.12",
@@ -37,6 +38,7 @@
     "openai": "^4.27.0",
     "prom-client": "^15.1.0",
     "rewiremock": "^3.14.5",
+    "sequelize": "^6.37.0",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
     "sinon-express-mock": "^2.2.1",
