feat: Updating env templates

--- a/.env.template
+++ b/.env.template
@@ -10,7 +10,11 @@ VUE_APP_DISCORD_URI=
 SENTRY_AUTH_TOKEN=""
 
 # DEPLOYMENT
-UID=${UID}
-GRAFANA_USER="GRAFANA_USER"
-GRAFANA_PASSWORD="GRAFANA_PASSWORD"
-```
+## Grafana
+GRAFANA_USER=
+GRAFANA_PASSWORD=
+
+## PostgreSQL
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
