--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start:api": "ts-node-dev ./api/server.ts --watch api/*.d.ts",
     "deploy:up": "cd deployment && docker-compose up",
     "deploy:down": "cd deployment && docker-compose down",
-    "dev": "concurrently \"npm run start:front\" \"npm run start:api\"",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -20,19 +19,23 @@
   "dependencies": {
     "@nuxt/bridge": "^3.0.0",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
-    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
     "@sentry/node": "^7.93.0",
     "@sentry/profiling-node": "^1.3.5",
     "@sentry/vite-plugin": "^2.10.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.3",
+    "@types/pg": "^8.11.0",
+    "autoprefixer": "^10.4.17",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "nuxt": "^3.9.1",
+    "pg": "^8.11.3",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vuex": "^4.1.0"
   }
 }
