--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint-plugin-vue": "^9.21.1",
+    "nuxt-icon": "^0.6.8",
     "vue": "^3.4.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@nuxt/bridge": "^3.0.0",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia/nuxt": "^0.5.1",
     "@sentry/node": "^7.93.0",
     "@sentry/profiling-node": "^1.3.5",
@@ -29,13 +35,16 @@
     "autoprefixer": "^10.4.17",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "eslint": "^8.56.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "nuxt": "^3.9.1",
     "pg": "^8.11.3",
     "pinia": "^2.1.7",
     "postcss": "^8.4.35",
+    "postcss-custom-properties": "^13.3.5",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
     "vuex": "^4.1.0"
   }
 }
