core: Moving API, Deployment and Front in packages. Creating monorepo and adding lerna.

--- a/packages/deployment/docker-compose.yml
+++ b/packages/deployment/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     image: grafana/grafana
     restart: unless-stopped
     container_name: "grafana"
-    user: ${UID}
+    user: "grafana"
     ports:
       - 3234:3000
     networks:
