--- a/package.json
+++ b/package.json
@@ -1,50 +1,28 @@
 {
-  "name": "nuxt-app",
+  "name": "afdesports-admin",
+  "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "description": "Full stack of AFD.ESPORTS Admin app",
+  "main": "index.js",
+  "repository": "https://github.com/AFD-ESPORTS/afdesports-admin.git",
+  "author": "Gilles COGNIN <gillescognin@gmail.com>",
+  "license": "MIT",
+  "workspaces": [
+    "packages/api",
+    "packages/front",
+    "packages/deployment"
+  ],
   "scripts": {
     "build": "nuxt build",
-    "start:front": "nuxt dev",
+    "start:front": "nuxt dev --https --ssl-cert certs/localhost.pem --ssl-key certs/localhost-key.pem",
     "start:api": "ts-node-dev ./api/server.ts --watch api/*.d.ts",
-    "deploy:up": "cd deployment && docker-compose up",
-    "deploy:down": "cd deployment && docker-compose down",
+    "deploy:up": "docker-compose -f packages/deployment/docker-compose.yml -p afdadmin_stack up",
+    "deploy:down": "docker-compose -f packages/deployment/docker-compose.yml -p afdadmin_stack down",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint-plugin-vue": "^9.21.1",
-    "nuxt-icon": "^0.6.8",
-    "vue": "^3.4.10",
-    "vue-router": "^4.2.5"
-  },
   "dependencies": {
-    "@nuxt/bridge": "^3.0.0",
-    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
-    "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^6.11.4",
-    "@pinia/nuxt": "^0.5.1",
-    "@sentry/node": "^7.93.0",
-    "@sentry/profiling-node": "^1.3.5",
-    "@sentry/vite-plugin": "^2.10.2",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.3",
-    "@types/pg": "^8.11.0",
-    "autoprefixer": "^10.4.17",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "eslint": "^8.56.0",
-    "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
-    "nuxt": "^3.9.1",
-    "pg": "^8.11.3",
-    "pinia": "^2.1.7",
-    "postcss": "^8.4.35",
-    "postcss-custom-properties": "^13.3.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vuex": "^4.1.0"
+    "lerna": "^8.1.2"
   }
 }
