--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "packages/deployment"
   ],
   "scripts": {
-    "build": "nuxt build",
-    "start:front": "nuxt dev --https --ssl-cert certs/localhost.pem --ssl-key certs/localhost-key.pem",
-    "start:api": "ts-node-dev ./api/server.ts --watch api/*.d.ts",
+    "start:front": "yarn --cwd packages/front start",
+    "start:api": "yarn --cwd packages/api dev",
     "deploy:up": "docker-compose -f packages/deployment/docker-compose.yml -p afdadmin_stack up",
-    "deploy:down": "docker-compose -f packages/deployment/docker-compose.yml -p afdadmin_stack down",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "deploy:down": "docker-compose -f packages/deployment/docker-compose.yml -p afdadmin_stack down"
   },
   "dependencies": {
     "lerna": "^8.1.2"
