core: Installing missing PG dependencies

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.11.1",
     "@types/sequelize": "^4.28.20",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.12",
@@ -36,6 +37,7 @@
     "mocha": "^10.2.0",
     "nock": "^13.5.1",
     "openai": "^4.27.0",
+    "pg": "^8.11.3",
     "prom-client": "^15.1.0",
     "rewiremock": "^3.14.5",
     "sequelize": "^6.37.0",
