--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,9 +12,11 @@
     "@sentry/cli": "^2.25.3",
     "@sentry/node": "^7.93.0",
     "@sentry/profiling-node": "^1.3.5",
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.8",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
@@ -26,7 +28,9 @@
     "@types/sinon-express-mock": "^1.3.12",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "chai": "^5.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -58,6 +62,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cors": "^2.8.17",
     "chai-as-promised": "^7.1.1"
   }
 }
