--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nuxt/bridge": "^3.0.0",
+    "@nuxt/types": "^2.17.3",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
@@ -27,10 +28,13 @@
     "@sentry/node": "^7.93.0",
     "@sentry/profiling-node": "^1.3.5",
     "@sentry/vite-plugin": "^2.10.2",
+    "@turf/turf": "^6.5.0",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.3",
     "@types/pg": "^8.11.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "eslint": "^8.56.0",
