fix: Updating back and front env samples

--- a/packages/api/.env.template
+++ b/packages/api/.env.template
@@ -1,6 +1,10 @@
 # GLOBAL CONFIGURATION
 API_PORT=3002
 NODE_ENV=production
+BASE_URL=https://localhost:3002
+FRONTEND_URL=
+SSL_KEY_PATH=../../certs/
+SSL_CERT_PATH=../../certs/
 
 # SENTRY CONFIGURATION
 SENTRY_AUTH_TOKEN=YOUR_SENTRY_AUTH_TOKEN
@@ -24,7 +28,8 @@ DB_PASSWORD=YOUR_DB_PASSWORD
 DISCORD_CLIENT_ID=YOUR_DISCORD_CLIENT_ID
 DISCORD_CLIENT_SECRET=YOUR_DISCORD_CLIENT_SECRET
 DISCORD_REDIRECT_URI=YOUR_DISCORD_REDIRECT_URI
-DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN
-DISCORD_BOT_ID=YOUR_DISCORD_BOT_ID
 DISCORD_GUILD_ID=YOUR_DISCORD_GUILD_ID
-DISCORD_GUILD_INVITE=YOUR_DISCORD_GUILD_INVITE
+# DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN
+# DISCORD_BOT_ID=YOUR_DISCORD_BOT_ID
+# DISCORD_GUILD_ID=YOUR_DISCORD_GUILD_ID
+# DISCORD_GUILD_INVITE=YOUR_DISCORD_GUILD_INVITE
