--- a/packages/front/.env.template
+++ b/packages/front/.env.template
@@ -1,10 +1,15 @@
 # GLOBAL
 PROJECT_NAME=""
+BASE_URL=
+VITE_API_PORT=3002
+VITE_API_URL=
+SSL_KEY_PATH=../../certs/
+SSL_CERT_PATH=../../certs/
 
 # DISCORD
-VUE_APP_DISCORD_CLIENT_ID=
-VUE_APP_DISCORD_CLIENT_SECRET=
-VUE_APP_DISCORD_URI=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+VITE_DISCORD_URI=
 
 # SENTRY
 SENTRY_AUTH_TOKEN=""
