core: Adding new path to types

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -18,7 +18,8 @@
       "#db/*": ["db/*"],
       "#root/*": ["*"],
       "#test/*": ["test/*"],
-      "#services/*": ["services/*"]
+      "#services/*": ["services/*"],
+      "#types/*": ["types/*"]
     }
   },
   "include": ["./**/*.ts", "./**/*.spec.ts", "database/config.js"],
