--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -45,6 +45,7 @@
     "prom-client": "^15.1.0",
     "rewiremock": "^3.14.5",
     "sequelize": "^6.37.0",
+    "shieldbow": "^2.3.1",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
     "sinon-express-mock": "^2.2.1",
