core: Setting nuxt

--- a/packages/api/.env.template
+++ b/packages/api/.env.template
@@ -6,6 +6,9 @@ FRONTEND_URL=
 SSL_KEY_PATH=../../certs/
 SSL_CERT_PATH=../../certs/
 
+# RIOT API CONFIGURATION
+RIOT_API_KEY=
+
 # SENTRY CONFIGURATION
 SENTRY_AUTH_TOKEN=YOUR_SENTRY_AUTH_TOKEN
 SENTRY_DSN=YOUR_SENTRY_DSN
